data/derived/comb/progs/unify/prog6470.ml.out
Characters 89-91:
  else if t=[] then -1
                    ^^
Error: This expression has type int but an expression was expected of type
         'a list
